[package]
name = "lila-corral"
version = "0.1.0"
edition = "2021"
authors = ["Lakin Wecker <lakin@lichess.org>"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
clap = "2.34"
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
mongodb = "2.1"
pretty_env_logger = "0.4"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0.60"
structopt = { version = "0.3" }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.6", features = ["io"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
thiserror = "1.0" 
